# UNADE_GMLtoGDB

./: .gitignore  README.md  gml_importer_gui.py  gml_to_neo4j_importer.py  pyproject.toml  requirements.txt  run_gui.py  transform_coordinates.py  water_network_utility_ade_complete_3_citygml3.gml
